--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>OMNIC</title>
+    <title>omnic</title>
     <script type="text/javascript">
       var pathSegmentsToKeep = 1;
 
