--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600&family=Roboto&display=swap" rel="stylesheet">
+  <title>omnic</title>
   <script type="text/javascript">
     (function(l) {
       if (l.search[1] === '/' ) {
@@ -19,7 +20,6 @@
       }
     }(window.location))
   </script>
-  <title>OMNIC</title>
 </head>
 <body>
   <div id="root"></div>
