--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600&family=Roboto&display=swap" rel="stylesheet"><script>(function(l) {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600&family=Roboto&display=swap" rel="stylesheet"><title>OMNIC</title><script>(function(l) {
       if (l.search[1] === '/' ) {
         var decoded = l.search.slice(1).split('&').map(function(s) { 
           return s.replace(/~and~/g, '&')
@@ -7,4 +7,4 @@
             l.pathname.slice(0, -1) + decoded + l.hash
         );
       }
-    }(window.location))</script><title>OMNIC</title><script defer="defer" src="/main.bundle.js"></script></head><body><div id="root"></div></body></html>
+    }(window.location))</script><script defer="defer" src="/main.bundle.js"></script></head><body><div id="root"></div></body></html>
